--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,10 @@
             <scope>test</scope>
             <version>3.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
