--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,10 @@
             <artifactId>hystrix-core</artifactId>
             <version>1.5.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
